# BOSSCAT-localvocal

./: .forked-from-commit.txt  .gitignore  BUILD_BRIEF.md  CHANGES.md  CMakeLists.txt  README.md  buildspec.json  install.sh  package-deb.sh
data/locale/: ar-SA.ini  de-DE.ini  en-GB.ini  en-US.ini  es-ES.ini  fr-FR.ini  hi-IN.ini  ja-JP.ini  ko-KR.ini  pl-PL.ini  pt-BR.ini  ru-RU.ini  zh-CN.ini
src/: caption-dock.cpp  caption-dock.h  plugin-main.c  transcription-filter-callbacks.cpp  transcription-filter-callbacks.h  transcription-filter-data.h  transcription-filter-properties.cpp  transcription-filter-utils.cpp  transcription-filter-utils.h  transcription-filter.cpp  transcription-filter.h
src/model-utils/: model-downloader-ui.cpp
src/whisper-utils/: remote-whisper.cpp  remote-whisper.h  token-buffer-thread.cpp  token-buffer-thread.h  whisper-processing.cpp  whisper-processing.h
